adjust testimonial image size

--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -297,6 +297,7 @@ span.resolution {
             img{
                 width: 100%;
                 margin-bottom: 20px;
+                min-height: 325px;
             }
 
             .quote{
