changes re: claudia

--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -444,9 +444,10 @@ span.resolution {
     }
 
     .account-creation{
-        h4{
-            color: black;
+        p{
             margin: 30px;
+            font-size: 1.125em;
+            font-weight: 500;
         }
 
         .actions{
