route to welcome-to-belief-school if creating-clarity has been done before payment

--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -454,6 +454,10 @@ span.resolution {
             button:before, button:after{
                 content: none;
             }
+
+            .yes{
+                padding: 20px;
+            }
         }
     }
 }
