add currency converter to home page

--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -324,6 +324,40 @@ span.resolution {
     .welcome-text{
         .price-container{
             padding-bottom: none;
+
+            span.select-style{
+                overflow: hidden;
+                display: inline-block;
+                vertical-align: middle;
+                position: relative;
+                // border-bottom: 1px solid #f16060;
+                margin-bottom: 2px;
+
+                select{
+                    padding-right: 20px;
+                    font-size: 25px;
+                    font-family: 'SantEliaRoughAlt-BoldThr', serif;
+                    color: #252e33;
+                    cursor: pointer;
+                    border: none;
+                    box-shadow: none;
+                    background: transparent;
+                    background-image: none;
+                    -webkit-appearance: none;
+
+                    &:focus{
+                        outline: none;
+                    }
+                }
+
+                span.icon-arrow-down{
+                    font-size: 20px;
+                    pointer-events: none;
+                    position: absolute;
+                    right: 0px;
+                    top: 8px;
+                }
+            }
         }
 
         p.center{
