center image loading percent

--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -435,6 +435,9 @@
             border-radius: 50%;
             color: $white;
             font-weight: 500;
+            position: absolute;
+            top: calc(50% - 32px);
+            left: calc(50% - 32px);
 
         }
 
