--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -79,7 +79,10 @@
 
     > .inner {
         align-items: inherit !important;
+        padding: 20px;
+    }
 
+    .content{
         &.black{
             background: url(../img/dreamboard-backgrounds/black.png) no-repeat center center transparent !important;
             background-size: contain !important;
@@ -169,57 +172,59 @@
         }
     }
 
-    .background-image-selector{
-        text-align: center;
-        height: 35px;
+    .actions{
         display: flex;
-        justify-content: center;
-        position: absolute;
-        top: 0;
-        right: 0;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin-top: 25px;
 
-        button{
-            width: 35px;
-            height: 35px;
-            cursor: pointer;
-            background: #f16060;
-            color: white;
-            font-size: 25px;
+        button, .button{
+            z-index: 100;
+            position: relative;
+        }
 
-            &.previous{
-                -moz-transform: rotate(180deg);
-                -ms-transform: rotate(180deg);
-                -webkit-transform: rotate(180deg);
-                transform: rotate(180deg);
+        .background-image-selector{
+            text-align: center;
+            height: 55px;
+            display: flex;
+            justify-content: center;
+            font-weight: 600;
+
+            button{
+                width: 35px;
+                height: 55px;
+                cursor: pointer;
+                color: #252e33;
+                font-size: 15px;
+                font-weight: 600;
+
+                &.previous{
+                    -moz-transform: rotate(180deg);
+                    -ms-transform: rotate(180deg);
+                    -webkit-transform: rotate(180deg);
+                    transform: rotate(180deg);
+                }
+            }
+
+            span{
+                color: #252e33;
+                line-height: 55px;
+                padding: 0 20px;
+                font-size: 15px;
             }
         }
-
-        span{
-            background: #f16060;
-            color: white;
-            line-height: 35px;
-            border-right: 1px solid white;
-            border-left: 1px solid white;
-            padding: 0 20px;
-        }
-    }
-
-    .board {
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: center;
-    }
-
-    .button {
-        position:relative;
-        z-index: 20;
     }
 }
 
 .board {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    max-width: 1300px;
+    padding: 10% 0;
     @include breakpoint($brk-xlarge) {
         margin: auto;
-        width: 422px;
+        width: 450px;
     }
 
     @include breakpoint($brk-small) {
@@ -276,31 +281,46 @@
         }
     }
 
-    .row-4, .mid-row {
+    .row {
         display: flex;
-        justify-content: center;
+        justify-content: left;
         flex-direction: row;
         flex-wrap: wrap;
-    }
+        margin-left: 25px;
+        align-items: center;
 
-    .row-4 {
+        &.mid-row{
+            .image.image_5{
+                display: none;
+            }
+        }
+
         @include breakpoint($brk-xlarge) {
+            margin-left: 0px;
+            justify-content: center;
             width: 100%;
+            &.top-row{
+                .image.image_5{
+                    display: none;
+                }
+            }
+            &.mid-row{
+                .image.image_5{
+                    display: inline;
+                }
+            }
         }
     }
 
-    .mid-row {
-        @include breakpoint($brk-xlarge) {
-            width: 100%;
-        }
-    }
-    $imageDimension: 200px;
+    $imageDimension: 225px;
 
     .image {
         width: $imageDimension;
         height: $imageDimension;
         background: rgba($grey, 0.95);
-        box-shadow: 0 0 30px rgba($fontColour, 0.08);
+        -webkit-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.25);
+        -moz-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.25);
+        box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.25);
         // display: flex;
         // justify-content: center;
         // align-items: center;
@@ -310,17 +330,65 @@
         transition: background-color $transition;
         backface-visibility: hidden;
         border: 15px solid $white;
+        margin-left: 20px;
 
-        // @include rotate-element(-5deg);
-
-        &:nth-child(2n){
-            // @include rotate-element(5deg);
+        &.image_1{
+            top: 20px;
+            z-index: 50;
+            @include rotate-element(-3deg);
         }
-
-        @include breakpoint($brk-xlarge) {
-            &:nth-child(1n){
-                @include rotate-element(0deg);
-            }
+        &.image_2{
+            @include rotate-element(5deg);
+            left: -20px;
+        }
+        &.image_3{
+            @include rotate-element(3deg);
+            left: -30px;
+            z-index: 50;
+        }
+        &.image_4{
+            @include rotate-element(-7deg);
+            left: -40px;
+            z-index: 49;
+        }
+        &.image_5{
+            @include rotate-element(5deg);
+            top: 40px;
+            left: -50px;
+            z-index: 48;
+        }
+        &.image_6{
+            left: -20px;
+            @include rotate-element(-8deg);
+        }
+        &.image_7{
+            left: -50px;
+            @include rotate-element(4deg);
+        }
+        &.image_8{
+            top: 20px;
+            left: -60px;
+            @include rotate-element(-8deg);
+        }
+        &.image_9{
+            left: -20px;
+            @include rotate-element(10deg);
+        }
+        &.image_10{
+            left: -20px;
+            z-index: 50;
+            top: 10px;
+            @include rotate-element(-5deg);
+        }
+        &.image_11{
+            left: -30px;
+            z-index: 49;
+            @include rotate-element(4deg);
+        }
+        &.image_12{
+            left: -45px;
+            top: -25px;
+            @include rotate-element(-5deg);
         }
 
         &:hover {
@@ -333,13 +401,11 @@
             }
         }
 
-        @include breakpoint($brk-small) {
-            width: $imageDimension * 2 - 25px;
-            height: $imageDimension * 2 - 25px;
-        }
-
         @include breakpoint($brk-xlarge) {
             margin: 10px 0;
+            .beautiful-text{
+                display: none;
+            }
         }
 
         input {
@@ -352,13 +418,16 @@
         }
 
         &.image_main {
-            transform-origin: 50% 50%;
-            transform: scale(1.25, 1.25);
+            left: -40px;
+            @include rotate-element(-4deg);
+            height: $imageDimension * 1.5;
+            width: $imageDimension * 1.5;
             position: relative;
-            z-index: 2;
+            z-index: 60;
             background: $grey;
-            box-sizing: content-box;
-            border-bottom: 30px solid white;
+            // box-sizing: content-box;
+            border: 25px solid white;
+            border-bottom: 45px solid white;
             overflow: visible;
 
             @include breakpoint($brk-xlarge) {
@@ -369,18 +438,36 @@
             }
 
             @include breakpoint($brk-small) {
-                width: $imageDimension * 2 - 55px;
-                height: $imageDimension * 2 - 55px;
-                margin-top: 0;
+                width: $imageDimension;
+                height: $imageDimension;
             }
 
             .beautiful-text{
                 font-family: 'SantEliaRoughAlt-BoldThr', serif;
                 position: absolute;
-                bottom: -25px;
-                font-size: 18px;
+                bottom: -37.5px;
+                font-size: 25px;
                 text-align: center;
                 width: 100%;
+            }
+        }
+
+        &.image_6, &.image_7{
+            width: $imageDimension * 1.25;
+            height: $imageDimension * 1.25;
+            border: 20px solid white;
+            @include breakpoint($brk-xlarge) {
+                width: $imageDimension;
+                height: $imageDimension;
+            }
+        }
+
+        @include breakpoint($brk-xlarge) {
+            &:nth-child(1n){
+                left: 0;
+                top: 0;
+                @include rotate-element(0deg);
+                border: 5px solid white;
             }
         }
 
