--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -83,7 +83,7 @@
     }
 
     .content{
-        max-width: 1300px;
+        max-width: 1250px;
         &.black{
             background: url(../img/dreamboard-backgrounds/black.png) no-repeat center center transparent !important;
             background-size: contain !important;
@@ -419,6 +419,7 @@
 
         &.image_main {
             left: -40px;
+            @include rotate-element(-4deg);
             height: $imageDimension * 1.5;
             width: $imageDimension * 1.5;
             position: relative;
