change welcome copy

--- a/resources/assets/scss/pages/welcome/_welcome.scss
+++ b/resources/assets/scss/pages/welcome/_welcome.scss
@@ -123,3 +123,8 @@ ul.accordion {
     margin-top: 70px;
 }
 
+.first-steps-list li{
+    list-style-type: disc;
+    padding-left: 30px;
+    margin-left: 15px;
+}
